// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FilterList rendering renders expected elements 1`] = `
<React.Fragment>
  <Layer
    className="FilterList"
  >
    <ScrollBox
      trackId="filterListTrack"
    >
      <div
        className="FilterList__items"
        onClick={[Function]}
      />
    </ScrollBox>
  </Layer>
</React.Fragment>
`;

exports[`FilterList rendering renders expected elements when className is set 1`] = `
<React.Fragment>
  <Layer
    className="FilterList TestClass"
  >
    <ScrollBox
      trackId="filterListTrack"
    >
      <div
        className="FilterList__items"
        onClick={[Function]}
      />
    </ScrollBox>
  </Layer>
</React.Fragment>
`;

exports[`FilterList rendering renders expected elements when filter is set 1`] = `
<React.Fragment>
  <Layer
    className="FilterList"
  >
    <ScrollBox
      trackId="filterListTrack"
    >
      <div
        className="FilterList__items"
        onClick={[Function]}
      >
        <div
          className="FilterList__item"
        >
          <button
            aria-controls="filterListDropDown"
            aria-expanded={true}
            aria-haspopup="dialog"
            className="FilterList__button"
            data-key="view"
            data-kind="item"
            id="filter-view"
            type="button"
          >
            <span
              className="FilterList__filterTitle"
            >
              view
            </span>
            <MenuArrow />
          </button>
          <button
            aria-label="Remove view filter"
            className="FilterList__remove"
            data-key="view"
            data-kind="remove"
            id="filter-view-remove"
            type="button"
          >
            <SvgIcon
              icon={
                {
                  "icon": [],
                  "iconName": "xmark-thin",
                }
              }
            />
          </button>
        </div>
      </div>
    </ScrollBox>
  </Layer>
  <React.Portal
    container={{}}
  >
    <FilterEditor
      buttonId="filter-view"
      getEditor={[MockFunction]}
      getLabel={[Function]}
      name="view"
      onClose={[Function]}
      onSave={[Function]}
      trackId="filterListTrack"
      value={
        [
          "abc",
        ]
      }
    />
  </React.Portal>
</React.Fragment>
`;

exports[`FilterList rendering renders expected elements when filter key is excluded 1`] = `
<React.Fragment>
  <Layer
    className="FilterList"
  >
    <ScrollBox
      trackId="filterListTrack"
    >
      <div
        className="FilterList__items"
        onClick={[Function]}
      />
    </ScrollBox>
  </Layer>
  <React.Portal
    container={{}}
  >
    <FilterEditor
      buttonId="filter-view"
      getEditor={[MockFunction]}
      getLabel={[Function]}
      name="view"
      onClose={[Function]}
      onSave={[Function]}
      trackId="filterListTrack"
      value={
        [
          "abc",
        ]
      }
    />
  </React.Portal>
</React.Fragment>
`;

exports[`FilterList rendering renders expected elements when filters are set 1`] = `
<React.Fragment>
  <Layer
    className="FilterList"
  >
    <ScrollBox
      trackId="filterListTrack"
    >
      <div
        className="FilterList__items"
        onClick={[Function]}
      >
        <div
          className="FilterList__item"
        >
          <button
            aria-controls={null}
            aria-expanded={false}
            aria-haspopup="dialog"
            className="FilterList__button"
            data-key="view"
            data-kind="item"
            id="filter-view"
            type="button"
          >
            <span
              className="FilterList__filterTitle"
            >
              view
            </span>
            <MenuArrow />
          </button>
          <button
            aria-label="Remove view filter"
            className="FilterList__remove"
            data-key="view"
            data-kind="remove"
            id="filter-view-remove"
            type="button"
          >
            <SvgIcon
              icon={
                {
                  "icon": [],
                  "iconName": "xmark-thin",
                }
              }
            />
          </button>
        </div>
        <div
          className="FilterList__item"
        >
          <button
            aria-controls={null}
            aria-expanded={false}
            aria-haspopup="dialog"
            className="FilterList__button"
            data-key="zoneName"
            data-kind="item"
            id="filter-zoneName"
            type="button"
          >
            <span
              className="FilterList__filterTitle"
            >
              zoneName
            </span>
            <MenuArrow />
          </button>
          <button
            aria-label="Remove zoneName filter"
            className="FilterList__remove"
            data-key="zoneName"
            data-kind="remove"
            id="filter-zoneName-remove"
            type="button"
          >
            <SvgIcon
              icon={
                {
                  "icon": [],
                  "iconName": "xmark-thin",
                }
              }
            />
          </button>
        </div>
      </div>
    </ScrollBox>
  </Layer>
</React.Fragment>
`;
